--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme"></activity>
 
+        <activity
+            android:name=".FoundActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCgmMfqV2ZMCAlgJifZ8I27rmFInUjUMDY" />
