--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.inveni">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
+
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -26,6 +32,21 @@
 
         <activity
             android:name=".FoundActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".CreateActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".ContactActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".SearchActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"></activity>
 
